--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
+  date_time_picker: ^2.1.0
+
 
 
 
