--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
   date_time_picker: ^2.1.0
+  modal_bottom_sheet: ^2.1.0
+
 
 
 
